# portage

./: sets.conf
.dev-ruby/kissfft/: Manifest  kissfft-0.0.2-r1.ebuild
.dev-ruby/metasploit-model/: Manifest  metasploit-model-2.0.3-r1.ebuild
.dev-ruby/msgpack/: Manifest  msgpack-1.1.0.ebuild
.dev-ruby/patch_finder/: Manifest  patch_finder-1.0.2-r1.ebuild
.dev-ruby/recog/: Manifest  recog-2.0.14-r2.ebuild
.dev-ruby/rex-bin_tools/: Manifest  rex-bin_tools-0.1.2-r1.ebuild
.dev-ruby/rex-random_identifier/: Manifest  rex-random_identifier-0.1.0-r1.ebuild
.dev-ruby/rex-registry/: Manifest  rex-registry-0.1.0-r2.ebuild
.dev-ruby/rex-rop_builder/: Manifest  rex-rop_builder-0.1.2-r1.ebuild
.net-analyzer/metasploit/: Manifest  metasploit-4.14.16-r1.ebuild
angee/acm/: Manifest  acm-9999.ebuild
angee/ang-angeecontrol/: Manifest  ang-angeecontrol-9999.ebuild
angee/ang-cmake/: Manifest  ang-cmake-9999.ebuild
angee/ang-common/: Manifest  ang-common-9999.ebuild
angee/ang-crypto/: Manifest  ang-crypto-9999.ebuild
angee/ang-db/: Manifest  ang-db-9999.ebuild
angee/ang-messages/: Manifest  ang-messages-9999.ebuild
angee/ang-messages-proto/: Manifest  ang-messages-proto-9999.ebuild
angee/ang-monitor/: Manifest  ang-monitor-9999.ebuild
angee/ang-stator-connector/: Manifest  ang-stator-connector-9999.ebuild
angee/ang-vbox-soap/: Manifest  ang-vbox-soap-9999.ebuild
angee/ang-ws/: Manifest  ang-ws-9999.ebuild
app-admin/logstash-bin/: Manifest  logstash-bin-7.2.0.ebuild
app-benchmarks/luxmark/: Manifest  luxmark-3.1.ebuild
app-benchmarks/phoronix-test-suite/: Manifest
app-doc/doxygen/: Manifest  doxygen-1.8.19.ebuild
app-doc/kicad-doc/: Manifest  kicad-doc-5.1.6.ebuild
app-editors/nano/: Manifest  configure.ac  nano-9999.ebuild
app-editors/qhexedit2/: Manifest  qhexedit2-0.8.6.ebuild
app-editors/visual-studio-code/: Manifest  visual-studio-code-1.16.1.ebuild
app-emulation/anbox/: Manifest  anbox-9999.2018.07.19-r2.ebuild
app-emulation/docker/: Manifest  docker-18.02.0-r1.ebuild
app-emulation/libguestfs/: Manifest  libguestfs-1.36.11.ebuild  libguestfs-1.38.6-r101.ebuild  libguestfs-1.38.6.ebuild
app-emulation/qemu/: Manifest  qemu-2.11.1.ebuild
app-emulation/virt-viewer/: Manifest  metadata.xml  virt-viewer-8.0-r1.ebuild  virt-viewer-9.0-r1.ebuild
app-metrics/prometheus2/: Manifest
app-misc/hivex/: Manifest  hivex-1.3.14.ebuild
app-misc/lirc/: Manifest  lirc-0.9.4c.ebuild
app-pda/ideviceinstaller/: Manifest  ideviceinstaller-9999.ebuild
app-pda/idevicerestore/: Manifest  idevicerestore-9999.ebuild
app-pda/ifuse/: Manifest  ifuse-9999.ebuild
app-pda/libimobiledevice/: Manifest  libimobiledevice-9999.ebuild
app-pda/libimobiledevice-glue/: Manifest  libimobiledevice-glue-9999.ebuild
app-pda/libirecovery/: Manifest  libirecovery-9999.ebuild
app-pda/libplist/: Manifest  libplist-9999.ebuild
app-pda/libusbmuxd/: Manifest  libusbmuxd-9999.ebuild
app-pda/usbmuxd/: Manifest  usbmuxd-9999.ebuild
app-shells/scsh/: Manifest  scsh-0.7.ebuild
app-shells/thefuck/: Manifest  thefuck-3.30.ebuild
app-text/master-pdf-editor/: Manifest  master-pdf-editor-5.6.42.ebuild
dev-ada/libadalang/: Manifest
dev-cpp/asio/: Manifest  asio-9999.ebuild
dev-cpp/glog/: Manifest  glog-0.4.0.ebuild
dev-cpp/kfr/: Manifest  kfr-1.2.0.ebuild  kfr-1.2.9999.ebuild
dev-cpp/libjson-rpc-cpp/: Manifest  libjson-rpc-cpp-9999.ebuild
dev-cpp/nlohmann_json/: Manifest  nlohmann_json-3.6.1.ebuild
dev-cpp/properties-cpp/: Manifest  properties-cpp-9999.ebuild
dev-cpp/yaml-cpp/: Manifest  yaml-cpp-0.5.3-r1.ebuild  yaml-cpp-9999.ebuild
dev-db/mongodb/: Manifest  mongodb-4.1.11.ebuild
dev-db/spatialite/: Manifest  spatialite-4.3.0a.ebuild
dev-dotnet/gtk-sharp/: Manifest  gtk-sharp-9999.ebuild
dev-embedded/arduino/: Manifest
dev-embedded/gputils/: Manifest  gputils-1.5.0.ebuild
dev-embedded/libftdi/: Manifest  libftdi-0.20-r1.ebuild  libftdi-1.4.ebuild  libftdi-1.5.ebuild
dev-embedded/openocd/: Manifest  openocd-9999.ebuild
dev-go/gox/: Manifest  gox-0.4.0.ebuild
dev-go/iochan/: Manifest  iochan-0.1.0.ebuild
dev-haskell/blaze-svg/: Manifest  blaze-svg-0.3.6.1.ebuild
dev-haskell/storable-endian/: Manifest  storable-endian-0.2.5.ebuild
dev-java/: out
dev-java/icedtea/: Manifest
dev-lang/erlang/: Manifest  erlang-22.0.2-r1.ebuild
dev-lang/luajit/: Manifest  luajit-2.0.4-r1.ebuild
dev-lang/ruby/: Manifest  ruby-2.4.0.ebuild  ruby-2.6.0.ebuild
dev-lang/rust/: Manifest
dev-libs/amdgpu-pro-opencl/: Manifest  amdgpu-pro-opencl-18.20.684755.ebuild
dev-libs/atcore/: Manifest  atcore-9999.ebuild
dev-libs/boost/: Manifest
dev-libs/flatbuffers/: Manifest  flatbuffers-9999.ebuild
dev-libs/gnulib/: Manifest  gnulib-2019.03.17.09.24.57.ebuild  gnulib-9999-r1.ebuild
dev-libs/klibc/: Manifest  klibc-2.0.4-r1.ebuild
dev-libs/libQuotient/: Manifest  libQuotient-0.6.0.ebuild
dev-libs/libclc/: Manifest  libclc-0.2.0_pre20160921-r1.ebuild  (+1 more)
dev-libs/msgpack/files/: CMakeLists.txt
eclass/: dune.eclass
profiles/: categories  package.mask  repo_name
(+658 files in other folders)
